clang/test/BSC/Negative/NullabilityCheck/chained_pointer_assignment.cbs
// RUN: %clang_cc1 -nullability-check=all -verify %s

_Safe void safe_free(void *_Owned p);

void test1() {
    int *p1, *p2;
    p1 = p2 = nullptr;
    int *p3 = (int *_Nonnull)p1; // expected-error {{cannot cast nullable pointer to nonnull type}}
    int *p4 = (int *_Nonnull)p2; // expected-error {{cannot cast nullable pointer to nonnull type}}
}

void test2() {
    int *p1, *p2;
    p1 = p2 = nullptr;
    int *_Owned p3 = (int *_Owned)p1; // expected-error {{cannot cast nullable pointer to nonnull type}}
    int *_Owned p4 = (int *_Owned)p2; // expected-error {{cannot cast nullable pointer to nonnull type}}
    safe_free((void *_Owned)p3);
    safe_free((void *_Owned)p4);
}

void test3() {
    int *p1, *p2;
    p1 = p2 = nullptr;
    int *_Borrow p3 = (int *_Borrow)p1; // expected-error {{cannot cast nullable pointer to nonnull type}}
    int *_Borrow p4 = (int *_Borrow)p2; // expected-error {{cannot cast nullable pointer to nonnull type}}
}
